minio/minio-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
  name: minio
  namespace:
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - image: minio/minio:latest
        args:
        - server
        - /storage
        name: minioc
        ports:
        - containerPort: 9000
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /storage
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /minio/health/live
            port: 9000
          initialDelaySeconds: 10
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 50
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "mkdir -p /storage/default"]
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: minio
