minio/minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
  name: minio-ui
  namespace:
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    app: minio
  type: LoadBalancer
