minio/minio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace:
  name: minio
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - host: minio.kube.noverit.com
    http:
      paths:
      - path: /
        backend:
          serviceName: minio
          servicePort: 9000
